<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity_privacidadyseguridad">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"

            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/txtPrivacidad"
            android:layout_width="128dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/Privacidad"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollPrivacidad"
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTerminos1"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/text1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/text2"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold" />

            <TextView
                android:id="@+id/txtTerminos3"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/text3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/text4"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos5"
                android:layout_width="match_parent"
                android:layout_height="161dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt5"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos6"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos7"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt7"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt8"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:id="@+id/txtTerminos9"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt9"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt10"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt11"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:id="@+id/txtTerminos12"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt12"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt13"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt14"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:id="@+id/txtTerminos15"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt15"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt16"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt17"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:id="@+id/txtTerminos18"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt18"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="string/txt19"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos20"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt20"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt21"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos22"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/txt22"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTerminos23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt23"
                android:textSize="16sp"
                android:fontFamily="@font/poppinssemibold"/>

            <TextView
                android:id="@+id/txtTerminos24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt24"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>

            <TextView
                android:id="@+id/txtTerminos25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt25"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsmedium"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>