<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/textboxprueba"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtaunnotienesTratamientos"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/recupe"
        android:textColor="@color/GrisHumo"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/mensajote"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/txtEmailRecuperacion"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:ems="10"
        android:background="@drawable/textboxprueba"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/GrisAzulito"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSiguienteAlert"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/Azul2"
        android:fontFamily="@font/poppinsmedium"
        android:foregroundTint="#FFFFFF"
        android:text="@string/btnSiguiente"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"/>

</LinearLayout>

